package com.nohana.projetoiot.model

data class Device(
    var name: String?,
    var address: String
) {

}
