---
config:
  theme: neutral
  look: neo
---
classDiagram
    class BluetoothController {
        +scannedDevices: StateFlow~Device~
        -_scannedDevices: MutableStateFlow~Device~
        +isConnected: StateFlow~Boolean~
        -_isConnected: MutableStateFlow~Boolean~
        +errors: SharedFlow~String~
        -_errors: MutableSharedFlow~String~
        -bleManager: BluetoothManager?
        -bleAdapter: BluetoothAdapter?
        -bleReceiver: BluetoothReceiver
        -bleStateReceiver: BluetoothStateReceiver
        -clientBleSocket: BluetoothSocket
        -bleDataService: BluetoothDataTrasferService
        +startScan()
        +stopScan()
        +closeConnection()
        +release()
        +connectToDevice(device: Device) BluetoothDevice
        +sendMessage(message: BluetoothMessage)
        -hasPermission(permission: String) Boolean
    }

    class BluetoothReceiver {
        +onReceive(context: Context, intent: Intent)
    }

    class BluetoothDataTrasferService {
        +sendMessage(message: BluetoothMessage)
    }

    class Device {
        -name: String
        -address: String
    }

    class BluetoothDeviceMapper {
        +BluetoothDeviceToDeviceModel(device: BluetoothDevice) Device
    }

    class BroadcastReceiver {
        +onReceive(context: Context, intent: Intent)*
    }

    class BluetoothMessage {
        -message: String
        +toByteArray() ByteArray
    }

    class BluetoothDevicesUiState {
        -devices: List~Device~
    }

    class DevicesActivity {
        -viewmodel: BluetoothViewModel
    }

    class BluetoothViewModel {
        -controller: BluetoothController
        -_state: MutableStateFlow~BluetoothDevicesUiState~
        +state: BluetootDevicesUiState
        -deviceConnectionJob : Job?
        +startScan()
        +stopScan()
        +sendMessage(message: BluetoothMessage)
        +connectToDevice(device: BluetoothDevice)
        +disconectFromDevice()
        -listen(): Job
    }

    <<abstract>> BroadcastReceiver

    BluetoothController "1" *-- "1" BluetoothReceiver : Faz parte
    BluetoothController "1" *-- "1" BluetoothDataTrasferService : Faz parte
    BluetoothController "1" -- "*" Device : Conhece
    BluetoothController "1" -- "1" BluetoothDeviceMapper : Utiliza
    BroadcastReceiver <|.. BluetoothReceiver : Herda
    BluetoothDataTrasferService "1" .. "*" BluetoothMessage : Envia
    Device "*" -- "1" BluetoothDevicesUiState : Apresenta
    BluetoothDevicesUiState "1" -- "1" BluetoothViewModel : Cria
    BluetoothViewModel "1" -- "1" BluetoothController : Serve
    BluetoothViewModel "1" -- "1" DevicesActivity : Supri
